--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
       rel="stylesheet"
       href="style.css"
     />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <title>Shopping List</title>
   </head>
-  <body class="bg-gray-800 text-slate-300">
+  <body>
     <div class="container">
       <header>
         <img
           src="images/note.png"
           alt=""
         />
-        <h1 class="text-4xl">Shopping List</h1>
+        <h1>Shopping List</h1>
       </header>
       <form id="item-form">
         <div class="form-control">
           <input
             type="text"
-            class="form-input text-slate-700"
+            class="form-input"
             id="item-input"
             name="item"
             placeholder="Enter Item"
@@ -94,7 +94,7 @@
 
       <button
         id="clear"
-        class="btn-clear text-slate-300"
+        class="btn-clear"
       >
         Clear All
       </button>
